--- a/NexTask/NexTask.Ui/wwwroot/index.html
+++ b/NexTask/NexTask.Ui/wwwroot/index.html
@@ -4,11 +4,12 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>NexTask.UI</title>
+    <title>NexTask.Ui</title>
     <base href="/" />
+    <link rel="stylesheet" href="css/bootstrap/bootstrap.min.css" />
     <link rel="stylesheet" href="css/app.css" />
-    <!-- If you add any scoped CSS files, uncomment the following to load them
-    <link href="NexTask.UI.styles.css" rel="stylesheet" /> -->
+    <link rel="icon" type="image/png" href="favicon.png" />
+    <link href="NexTask.Ui.styles.css" rel="stylesheet" />
 </head>
 
 <body>
